Fix bullets not showing up inside articles

--- a/css/pjf.css
+++ b/css/pjf.css
@@ -87,3 +87,17 @@ img.me {
     width: 100%;
     height: 100%;
 }
+
+/* Fix bullet lists in posts */
+
+.is-post ul, 
+.is-post-excerpt ul {
+    list-style: disc;
+    padding-left: 1em;
+}
+
+.is-post ol, 
+.is-post-excerpt ol {
+    list-style: decimal;
+    padding-left: 1em;
+}
